change styles of welcome page

--- a/src/app/core/pages/welcome-page/welcome-page.component.html
+++ b/src/app/core/pages/welcome-page/welcome-page.component.html
@@ -2,8 +2,8 @@
 <div class="bg"></div>
 <div class="bg bg2"></div>
 <div class="bg bg3"></div>
-<div class="content">
     <div class="welcome-page__container" id="welcome-page">
+      <div class="content">
       <mat-toolbar class="greeting">
         <h1 class="title">App Tracker</h1>
         <p class="greeting-text">Планируйте проекты и управляйте задачами!</p>
@@ -37,39 +37,41 @@
       <h1 class="team-content__title title">
     About our team
       </h1>
-      <div class="people">
-        <div class="profile">
-          <p>Dima</p>
-          <img src="../../../../assets/png/4576175.png" alt="check-list" class="people-icon">
+      <mat-card-content>
+        <div class="people">
+          <div class="profile">
+            <a href="https://github.com/gapeev" class="link">Dima</a>
+            <img src="../../../../assets/png/4576175.png" alt="check-list" class="people-icon">
+          </div>
+          <div class="description">
+            <p>team leader, frontend developer</p>
+            <p>board-module, core-module, shared module, store, app module</p>
+          </div>
         </div>
-        <div class="description">
-        <p>team leader, frontend developer</p>
-        <p>board-module, core-module, shared module, store, app module</p>
+        <div class="people">
+          <div class="profile">
+            <a href="https://github.com/Anesthesia92" class="link">Nastya</a>
+            <img src="../../../../assets/png/3234886.png" alt="check-list" class="people-icon">
+          </div>
+          <div class="description">
+            <p>frontend developer</p>
+            <p>board-module, core-module</p>
+          </div>
         </div>
-      </div>
-      <div class="people">
-        <div class="profile">
-          <p>Nastya</p>
-          <img src="../../../../assets/png/3234886.png" alt="check-list" class="people-icon">
+        <div class="people">
+          <div class="profile">
+            <a href="https://github.com/Valeria310" class="link">Valeria</a>
+            <img src="../../../../assets/png/3750030.png" alt="check-list" class="people-icon">
+          </div>
+          <div class="description">
+            <p>frontend developer</p>
+            <p>auth-module, core-module, app-module</p>
+          </div>
         </div>
-        <div class="description">
-        <p>frontend developer</p>
-        <p>board-module, core-module</p>
-        </div>
-      </div>
-      <div class="people">
-        <div class="profile">
-          <p>Valeria</p>
-          <img src="../../../../assets/png/3750030.png" alt="check-list" class="people-icon">
-        </div>
-        <div class="description">
-        <p>frontend developer</p>
-        <p>auth-module, core-module, app-module</p>
-        </div>
-      </div>
+      </mat-card-content>
       <hr class="greeting-line">
       <p class="project-description">
-        App tracker project, angular 2022Q1, rss-school
+        App tracker project, angular 2022Q1, <a href="https://rs.school/" class="link">rs-school</a>
       </p>
     </div>
   </div>
