feat: add the menu (sidenav)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,13 @@
-<div class="main">
-  <app-header></app-header>
-  <app-loading-bar></app-loading-bar>
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
-</div>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav>
+    <app-sidenav [sidenav]="sidenav"></app-sidenav>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div class="main">
+      <app-header [sidenav]="sidenav"></app-header>
+      <app-loading-bar></app-loading-bar>
+      <router-outlet></router-outlet>
+      <app-footer></app-footer>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
