--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,24 +1,29 @@
 <header>
   <mat-toolbar color="primary" [ngClass]="headerClassList">
-    <span class="logo">PMA</span>
-    <div *ngIf="(isAuth | async) && (username | async) as username">
-      <button mat-raised-button (click)="createBoard()">
-        {{ 'HEADER.BUTTONS.CREATE' | translate }}
+    <div class="toolbar-container">
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon>menu</mat-icon>
       </button>
-      <button mat-raised-button (click)="logout()">
-        {{ 'HEADER.BUTTONS.LOGOUT' | translate }}
-      </button>
-      <button routerLink="/user/update" mat-raised-button>
-        {{ 'HEADER.BUTTONS.EDIT' | translate }}
-      </button>
-      <button mat-raised-button (click)="deleteUser(username)">delete profile</button>
+      <span class="logo">App Tracker</span>
+      <div *ngIf="(isAuth | async) && (username | async) as username">
+        <button mat-raised-button (click)="createBoard()">
+          {{ 'HEADER.BUTTONS.CREATE' | translate }}
+        </button>
+        <button mat-raised-button (click)="logout()">
+          {{ 'HEADER.BUTTONS.LOGOUT' | translate }}
+        </button>
+        <button routerLink="/user/update" mat-raised-button>
+          {{ 'HEADER.BUTTONS.EDIT' | translate }}
+        </button>
+        <button mat-raised-button (click)="deleteUser(username)">delete profile</button>
+      </div>
+      <div *ngIf="(isAuth | async) === false">
+        <button routerLink="/auth/sign-in" mat-raised-button>Log In</button>
+        <button routerLink="/auth/sign-up" mat-raised-button>Sign Up</button>
+      </div>
+      <mat-slide-toggle [(ngModel)]="isLangToggle" (change)="handleChange()">{{
+        getLang()
+      }}</mat-slide-toggle>
     </div>
-    <div *ngIf="(isAuth | async) === false">
-      <button routerLink="/auth/sign-in" mat-raised-button>Log In</button>
-      <button routerLink="/auth/sign-up" mat-raised-button>Sign Up</button>
-    </div>
-    <mat-slide-toggle [(ngModel)]="isLangToggle" (change)="handleChange()">{{
-      getLang()
-    }}</mat-slide-toggle>
   </mat-toolbar>
 </header>
