--- a/src/app/core/pages/welcome-page/welcome-page.component.html
+++ b/src/app/core/pages/welcome-page/welcome-page.component.html
@@ -41,7 +41,7 @@
         <div class="people">
           <div class="profile">
             <a href="https://github.com/gapeev" class="link">Dima</a>
-            <img src="../../../../assets/png/4576175.png" alt="check-list" class="people-icon">
+            <img src="../../../../assets/png/4576175.png" alt="check-list" class="icon">
           </div>
           <div class="description">
             <p>team leader, frontend developer</p>
@@ -51,7 +51,7 @@
         <div class="people">
           <div class="profile">
             <a href="https://github.com/Anesthesia92" class="link">Nastya</a>
-            <img src="../../../../assets/png/3234886.png" alt="check-list" class="people-icon">
+            <img src="../../../../assets/png/3234886.png" alt="check-list" class="icon">
           </div>
           <div class="description">
             <p>frontend developer</p>
@@ -61,7 +61,7 @@
         <div class="people">
           <div class="profile">
             <a href="https://github.com/Valeria310" class="link">Valeria</a>
-            <img src="../../../../assets/png/3750030.png" alt="check-list" class="people-icon">
+            <img src="../../../../assets/png/3750030.png" alt="check-list" class="icon">
           </div>
           <div class="description">
             <p>frontend developer</p>
