--- a/src/app/core/pages/welcome-page/welcome-page.component.html
+++ b/src/app/core/pages/welcome-page/welcome-page.component.html
@@ -23,7 +23,8 @@
           <ul class="list">
             <li>Выстраивайте работу над проектом по любой удобной вам методике.</li>
             <li>Управляйте зависящими друг от друга, пересекающимися и непредвиденными задачами,
-              а также создавайте реалистичные планы. </li>
+              а также создавайте реалистичные планы.
+            </li>
           </ul>
         </div>
       </div>
