--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,11 +1,11 @@
 :host {
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
   z-index: 100;
 }
 
 .header {
-  padding: 1% 4%;
   &.scrolled {
     background: #30396b;
   }
@@ -14,6 +14,7 @@
 .toolbar-container {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 0.5rem 1.5rem;
   flex-grow: 1;
   display: flex;
   align-items: center;
