fix: change header and footer styles

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
   <mat-toolbar color="primary">
-    <div class="page-container footer">
+    <div class="footer">
       <span class="footer__year">App Tracker 2022</span>
       <div class="footer__authors">
         <a href="https://github.com/gapeev" class="footer__authors__link">gapeev</a>
