fix: fix lint errors

--- a/src/app/core/pages/welcome-page/welcome-page.component.html
+++ b/src/app/core/pages/welcome-page/welcome-page.component.html
@@ -8,10 +8,10 @@
         <h1 class="title">App Tracker</h1>
         <p class="greeting-text">Планируйте проекты и управляйте задачами!</p>
       </mat-toolbar>
-      <hr class="greeting-line">
+      <hr class="greeting-line" />
       <div class="functions">
         <div class="functions-management">
-          <img src="../../../../assets/png/tasks.png" alt="check-list" class="icon">
+          <img src="../../../../assets/png/tasks.png" alt="check-list" class="icon" />
           <ul class="list">
             <li>Организуйте работу своего коллектива в общем пространстве.</li>
             <li>Добавляйте колонки, задачи и виртуиальные доски.</li>
@@ -19,30 +19,31 @@
           </ul>
         </div>
         <div class="functions-settings">
-          <img src="../../../../assets/png/settings.png" alt="settings" class="icon">
+          <img src="../../../../assets/png/settings.png" alt="settings" class="icon" />
           <ul class="list">
             <li>Выстраивайте работу над проектом по любой удобной вам методике.</li>
-            <li>Управляйте зависящими друг от друга, пересекающимися и непредвиденными задачами,
-              а также создавайте реалистичные планы.
+            <li>
+              Управляйте зависящими друг от друга, пересекающимися и непредвиденными задачами, а
+              также создавайте реалистичные планы.
             </li>
           </ul>
         </div>
       </div>
-      <button mat-raised-button color="primary" class="about" (click)="scrollTo()">О команде</button>
+      <button mat-raised-button color="primary" class="about" (click)="scrollTo()">
+        О команде
+      </button>
     </div>
   </div>
 </div>
 <div class="team-page" id="team-page">
   <div class="team-page__container">
     <div class="team-content content">
-      <h1 class="team-content__title title">
-        About our team
-      </h1>
+      <h1 class="team-content__title title">About our team</h1>
       <mat-card-content>
         <div class="people">
           <div class="profile">
             <a href="https://github.com/gapeev" class="link">Dima</a>
-            <img src="../../../../assets/png/4576175.png" alt="check-list" class="icon">
+            <img src="../../../../assets/png/4576175.png" alt="check-list" class="icon" />
           </div>
           <div class="description">
             <p>team leader, frontend developer</p>
@@ -52,7 +53,7 @@
         <div class="people">
           <div class="profile">
             <a href="https://github.com/Anesthesia92" class="link">Nastya</a>
-            <img src="../../../../assets/png/3234886.png" alt="check-list" class="icon">
+            <img src="../../../../assets/png/3234886.png" alt="check-list" class="icon" />
           </div>
           <div class="description">
             <p>frontend developer</p>
@@ -62,7 +63,7 @@
         <div class="people">
           <div class="profile">
             <a href="https://github.com/Valeria310" class="link">Valeria</a>
-            <img src="../../../../assets/png/3750030.png" alt="check-list" class="icon">
+            <img src="../../../../assets/png/3750030.png" alt="check-list" class="icon" />
           </div>
           <div class="description">
             <p>frontend developer</p>
@@ -70,7 +71,7 @@
           </div>
         </div>
       </mat-card-content>
-      <hr class="greeting-line">
+      <hr class="greeting-line" />
       <p class="project-description">
         App tracker project, angular 2022Q1, <a href="https://rs.school/" class="link">rs-school</a>
       </p>
