--- a/src/app/board/pages/board-page/board-page.component.html
+++ b/src/app/board/pages/board-page/board-page.component.html
@@ -2,7 +2,7 @@
   <app-notification (confirm)="onErrorConfirm()"></app-notification>
   <div class="header">
     <div class="breadcrumbs">
-      <a class="breadcrumb-link" routerLink="/boards">Boards</a>
+      <a class="breadcrumb-link" routerLink="/boards">{{ 'BOARD-PAGE.LINK' | translate }}</a>
       <span>/</span>
       <span>{{ board.title }}</span>
     </div>
