--- a/src/app/board/pages/boards-page/boards-page.component.html
+++ b/src/app/board/pages/boards-page/boards-page.component.html
@@ -10,7 +10,7 @@
           {{ 'BOARDS-PAGE.BUTTONS.DELETE' | translate }}
         </button>
         <button [routerLink]="['/boards', board.id]" mat-stroked-button color="primary">
-          Open
+          {{ 'BOARDS-PAGE.BUTTONS.OPEN' | translate }}
         </button>
       </mat-card-actions>
     </mat-card>
