--- a/src/app/core/pages/welcome-page/welcome-page.component.html
+++ b/src/app/core/pages/welcome-page/welcome-page.component.html
@@ -6,31 +6,28 @@
     <div class="content">
       <mat-toolbar class="greeting">
         <h1 class="title">App Tracker</h1>
-        <p class="greeting-text">Планируйте проекты и управляйте задачами!</p>
+        <p class="greeting-text">{{ 'WELCOME-PAGE.GREETING-TEXT' | translate }}</p>
       </mat-toolbar>
       <hr class="greeting-line" />
       <div class="functions">
         <div class="functions-management">
           <img src="../../../../assets/png/tasks.png" alt="check-list" class="icon" />
           <ul class="list">
-            <li>Организуйте работу своего коллектива в общем пространстве.</li>
-            <li>Добавляйте колонки, задачи и виртуиальные доски.</li>
-            <li>Ставьте и контролируйте задачи любой сложности.</li>
+            <li>{{ 'WELCOME-PAGE.MANAGEMENT.1' | translate }}</li>
+            <li>{{ 'WELCOME-PAGE.MANAGEMENT.2' | translate }}</li>
+            <li>{{ 'WELCOME-PAGE.MANAGEMENT.3' | translate }}</li>
           </ul>
         </div>
         <div class="functions-settings">
           <img src="../../../../assets/png/settings.png" alt="settings" class="icon" />
           <ul class="list">
-            <li>Выстраивайте работу над проектом по любой удобной вам методике.</li>
-            <li>
-              Управляйте зависящими друг от друга, пересекающимися и непредвиденными задачами, а
-              также создавайте реалистичные планы.
-            </li>
+            <li>{{ 'WELCOME-PAGE.SETTINGS.1' | translate }}</li>
+            <li>{{ 'WELCOME-PAGE.SETTINGS.2' | translate }}</li>
           </ul>
         </div>
       </div>
       <button mat-raised-button color="primary" class="about" (click)="scrollTo()">
-        О команде
+        {{ 'WELCOME-PAGE.BUTTON' | translate }}
       </button>
     </div>
   </div>
@@ -38,11 +35,13 @@
 <div class="team-page" id="team-page">
   <div class="team-page__container">
     <div class="team-content content">
-      <h1 class="team-content__title title">About our team</h1>
+      <h2 class="team-content__title title">{{ 'WELCOME-PAGE.SUBTITLE' | translate }}</h2>
       <mat-card-content>
         <div class="people">
           <div class="profile">
-            <a href="https://github.com/gapeev" class="link">Dima</a>
+            <a href="https://github.com/gapeev" class="link">{{
+              'WELCOME-PAGE.NAMES.DIMA' | translate
+            }}</a>
             <img src="../../../../assets/png/4576175.png" alt="check-list" class="icon" />
           </div>
           <div class="description">
@@ -52,7 +51,9 @@
         </div>
         <div class="people">
           <div class="profile">
-            <a href="https://github.com/Anesthesia92" class="link">Nastya</a>
+            <a href="https://github.com/Anesthesia92" class="link">{{
+              'WELCOME-PAGE.NAMES.NASTYA' | translate
+            }}</a>
             <img src="../../../../assets/png/3234886.png" alt="check-list" class="icon" />
           </div>
           <div class="description">
@@ -62,7 +63,9 @@
         </div>
         <div class="people">
           <div class="profile">
-            <a href="https://github.com/Valeria310" class="link">Valeria</a>
+            <a href="https://github.com/Valeria310" class="link">{{
+              'WELCOME-PAGE.NAMES.LERA' | translate
+            }}</a>
             <img src="../../../../assets/png/3750030.png" alt="check-list" class="icon" />
           </div>
           <div class="description">
