--- a/src/app/core/pages/not-found-page/not-found-page.component.scss
+++ b/src/app/core/pages/not-found-page/not-found-page.component.scss
@@ -5,20 +5,59 @@ $primary: #3f51b5;
   height: 100vh;
   width: inherit;
   &__container {
-    margin: 0 auto;
-    max-width: 1440px;
     font-family: $font;
     display: flex;
     align-items: center;
     height: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
     .error-description {
       width: 50%;
+      color: $primary;
+      margin-left: 15px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       h1 {
-        font-family: $font;
         font-size: 40px;
+        line-height: 40px;
+      }
+      p {
+        font-size: 20px;
+        line-height: 30px;
+      }
+      button {
+        width: 150px;
+      }
+    }
+    .error-mark {
+      background-color: $primary;
+      width: 50%;
+      height: 100%;
+      font-family: $font;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      p {
+        font-size: 80px;
+        line-height: 80px;
+        color: white;
+        letter-spacing: 5px;
       }
     }
   }
 }
 
+@media (max-width: 520px) {
+  .error-page__container {
+    flex-direction: column;
+    max-width: 100%;
+  }
+  .error-description, .error-mark {
+    width: 100%!important;
+  }
+}
 
