fix: fix lint errors

--- a/src/app/core/pages/not-found-page/not-found-page.component.scss
+++ b/src/app/core/pages/not-found-page/not-found-page.component.scss
@@ -67,8 +67,8 @@ $primary: #3f51b5;
     flex-direction: column;
     max-width: 100%;
   }
-  .error-description, .error-mark {
+  .error-description,
+  .error-mark {
     width: 100% !important;
   }
 }
-
