--- a/src/app/core/pages/not-found-page/not-found-page.component.html
+++ b/src/app/core/pages/not-found-page/not-found-page.component.html
@@ -1,13 +1,15 @@
 <div class="error-page">
   <div class="error-page__container">
     <div class="error-description">
-      <h1>Page not found</h1>
-      <p>Something went wrong. <br />You can go back to the home page</p>
-      <button mat-raised-button color="primary" routerLink="/">Go home</button>
+      <h1>{{ 'ERROR-PAGE.TITLE' | translate }}</h1>
+      <p [innerHTML]="'ERROR-PAGE.TEXT' | translate"></p>
+      <button mat-raised-button color="primary" routerLink="/">
+        {{ 'ERROR-PAGE.BUTTON' | translate }}
+      </button>
     </div>
     <div class="error-mark">
       <p>404</p>
-      <p>Error</p>
+      <p>{{ 'ERROR-PAGE.ERROR' | translate }}</p>
     </div>
   </div>
 </div>
