--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,10 @@ body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
+router-outlet {
+  display: none;
+}
+
 .page-container {
   max-width: 1200px;
   margin: 0 auto;
